src/objects/HachuMeisaiData__c.object
<CustomObject>
    <fields>
        <fullName>Biko__c</fullName>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachuData__c</fullName>
        <label>発注データ</label>
        <referenceTo>HachuData__c</referenceTo>
        <relationshipLabel>発注明細データ</relationshipLabel>
        <relationshipName>HachuMeisaiData_HachuData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HachuKakuteiFlg__c</fullName>
        <formula>HachuData__r.HachuKakuteiFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_発注確定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HachuSuryoCS__c</fullName>
        <label>発注数量C/S</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HachuSuryoCT__c</fullName>
        <label>発注数量C/T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HachuSuryoPC__c</fullName>
        <label>発注数量PC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HachuSuryoSanshutsu__c</fullName>
        <formula>HachuSuryoCT__c * ShohinShizaiM__r.BaiRitsuCT__c

+

HachuSuryoCS__c * ShohinShizaiM__r.BaiRitsuCS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_発注数量算出</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HachushoIrisu__c</fullName>
        <formula>ShohinShizaiM__r.Naiyoryo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_入数</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoKikaku__c</fullName>
        <formula>ShohinShizaiM__r.Kikaku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_規格</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNoki__c</fullName>
        <formula>TEXT( MONTH( NohinYoteibi__c ) ) + &quot;/&quot; + TEXT( DAY( NohinYoteibi__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納期</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoShohinCode__c</fullName>
        <formula>ShohinShizaiM__r.ShohinShizaiCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_商品コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoShohinMei__c</fullName>
        <formula>LEFT(ShohinShizaiM__r.Name, 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_商品名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoSuryo__c</fullName>
        <formula>TEXT(  HachuSuryoSanshutsu__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_数量</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoTani__c</fullName>
        <formula>TaniPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_単位</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KonyuKakaku__c</fullName>
        <inlineHelpText>空白　の　場合　商品資材マスタ　の　標準原価　となる。</inlineHelpText>
        <label>購入単価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MeisaiKingaku__c</fullName>
        <formula>KonyuKakaku__c  *  HachuSuryoPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>購入単価×発注数量</inlineHelpText>
        <label>明細金額小計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MeisaiZeigaku__c</fullName>
        <formula>FLOOR(MeisaiKingaku__c  *  Shohizeiritsu__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>行金額×消費税率（小数点以下切捨て）</inlineHelpText>
        <label>明細税額小計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MeisaiZeikomi__c</fullName>
        <formula>FLOOR(MeisaiKingaku__c  +  MeisaiZeigaku__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>明細金額小計＋明細税額小計（小数点以下切捨て）</inlineHelpText>
        <label>明細税込小計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NohinYoteibiSansho__c</fullName>
        <description>納品予定日を参照するためだけの数式項目</description>
        <formula>NohinYoteibi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>納品予定日を参照するためだけの数式項目</inlineHelpText>
        <label>￥￥_納品予定日参照</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NohinYoteibi__c</fullName>
        <description>発注時には決まらず、納期回答があれば入力する</description>
        <inlineHelpText>発注時には決まらず、納期回答があれば入力する</inlineHelpText>
        <label>納品予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShiiresakiMeiNamachi__c</fullName>
        <label>￥￥_仕入先名生値</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品資材</label>
        <referenceTo>ShohinShizaiM__c</referenceTo>
        <relationshipLabel>発注明細データ</relationshipLabel>
        <relationshipName>HachuMeisaiData_ShohinShizaiM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiMmei__c</fullName>
        <formula>ShohinShizaiM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品資材マスタ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shohizeiritsu__c</fullName>
        <defaultValue>$Setup.SystemParam__c.Shohizeiritsu__c</defaultValue>
        <label>消費税率</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaniCS__c</fullName>
        <formula>&quot;1&quot; + ShohinShizaiM__r.TaniCS__c +  
TEXT( ShohinShizaiM__r.BaiRitsuCS__c )  + 
 ShohinShizaiM__r.TaniPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>単位C/S</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaniCT__c</fullName>
        <formula>&quot;1&quot; + ShohinShizaiM__r.TaniCT__c +   
TEXT(ShohinShizaiM__r.BaiRitsuCT__c )  + 
 ShohinShizaiM__r.TaniPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>単位C/T</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaniPC__c</fullName>
        <formula>ShohinShizaiM__r.TaniPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>単位PC</label>
        <type>Text</type>
    </fields>
    <label>発注明細データ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HachuData__c</columns>
        <columns>ShohinShizaiMmei__c</columns>
        <columns>NohinYoteibi__c</columns>
        <columns>HachuSuryoPC__c</columns>
        <columns>KonyuKakaku__c</columns>
        <columns>MeisaiKingaku__c</columns>
        <columns>MeisaiZeigaku__c</columns>
        <columns>MeisaiZeikomi__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View20151207a</fullName>
        <columns>NAME</columns>
        <columns>HachuData__c</columns>
        <columns>ShohinShizaiMmei__c</columns>
        <columns>HachuSuryoPC__c</columns>
        <columns>NohinYoteibi__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HachuKakuteiFlg__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>．発注未確定</label>
    </listViews>
    <nameField>
        <displayFormat>発注明細-{0000000000}</displayFormat>
        <label>発注明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>